src/pages/Portfolio/Portfolio.module.css
.container {
  display: flex;
  flex-wrap: wrap;
  filter: blur(0);

  justify-content: space-around;
}

.container > div {
  margin: 10px;
  transition: transform 0.1s ease, filter 0.3s ease;
}

.container:has(> div:hover) > div:not(:hover) {
  filter: blur(5px);
}

.container > div:hover {
  transform: scale(1.1);
  filter: blur(0);
}

@keyframes fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes scale {
  from {
    scale: 0.8;
  }
  to {
    scale: 1;
  }
}

.container > div {
  animation: scale 1s ease;
}

